--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "outDir": "dist",
-    "sourceMap": true,
-    "declaration": true,
-    "strict": true
-  },
-  "exclude": ["node_modules"]
+    "strict": true,
+    "outDir": "dist"
+  }
 }
