--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.25",
     "@types/node": "^13.1.2",
+    "@types/pino": "^5.15.1",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "eslint": "^6.8.0",
@@ -39,7 +40,9 @@
     "typescript": "^3.7.4"
   },
   "dependencies": {
-    "http4ts": "git+ssh://git@github.com/http4ts/http4ts.git"
+    "http4ts": "git+ssh://git@github.com/http4ts/http4ts.git",
+    "pino": "^5.15.0",
+    "pino-pretty": "^3.5.0"
   },
   "jest": {
     "preset": "ts-jest",
