--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "lint": "eslint --ext .ts src/**",
     "lint-fix": "eslint --ext .ts --fix src/**",
-    "start": "nodemon",
+    "start": "npm run start-db & nodemon",
     "build": "rm -rf dist && tsc -p tsconfig.json",
     "test": "jest",
-    "tdd": "jest --watchAll"
+    "tdd": "jest --watchAll",
+    "start-db": "pouchdb-server --dir db --no-stdout-logs"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,11 @@
   },
   "homepage": "https://github.com/http4ts/http4ts-realworld-example-app#readme",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^24.0.25",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "^13.1.2",
+    "@types/node-fetch": "^2.5.4",
     "@types/pino": "^5.15.1",
     "@types/pouchdb": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
@@ -35,6 +39,8 @@
     "jest": "^24.9.0",
     "lint-staged": "^9.5.0",
     "nodemon": "^2.0.2",
+    "pouchdb-adapter-memory": "^7.1.1",
+    "pouchdb-server": "^4.2.0",
     "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
@@ -42,7 +48,10 @@
     "web-streams-polyfill": "^2.0.6"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "http4ts": "git+ssh://git@github.com/http4ts/http4ts.git",
+    "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^2.6.0",
     "pino": "^5.15.0",
     "pino-pretty": "^3.5.0",
     "pouchdb": "^7.1.1"
@@ -52,6 +61,9 @@
     "rootDir": "./src",
     "setupFiles": [
       "<rootDir>../jest/setup.ts"
+    ],
+    "testMatch": [
+      "**/?(*.)+(spec|test).[jt]s?(x)"
     ]
   },
   "eslintConfig": {
