--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.7",
-    "http4ts": "git+ssh://git@github.com/http4ts/http4ts.git",
+    "http4ts": "0.0.1-next",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
     "pino": "^5.15.0",
