--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "web-streams-polyfill": "^2.0.6"
   },
   "dependencies": {
+    "@types/content-type": "^1.1.3",
     "bcrypt": "^3.0.7",
+    "content-type": "^1.0.4",
     "http4ts": "0.0.1-next",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
