--- a/package.json
+++ b/package.json
@@ -45,14 +45,13 @@
     "prettier": "^2.0.0",
     "ts-jest": "^25.2.1",
     "ts-node": "^8.7.0",
-    "typescript": "^3.8.3",
-    "web-streams-polyfill": "^2.1.0"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "@types/content-type": "^1.1.3",
     "bcrypt": "^4.0.1",
     "content-type": "^1.0.4",
-    "http4ts": "0.0.1-next",
+    "http4ts": "0.0.3",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
     "pino": "^5.17.0",
