--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Realworld app implementation using Typescript and http4ts framework",
   "scripts": {
-    "lint": "eslint --ext .ts src/**",
-    "lint-fix": "eslint --ext .ts --fix src/**",
+    "lint": "eslint --ext .ts src/** && prettier src/** --check",
+    "lint-fix": "eslint --ext .ts --fix src/** && prettier src/** --write",
     "start": "npm run start-db & nodemon",
     "build": "rm -rf dist && tsc -p tsconfig.json",
     "test": "jest",
@@ -24,26 +24,26 @@
   "homepage": "https://github.com/http4ts/http4ts-realworld-example-app#readme",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/jest": "^25.1.4",
+    "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.8",
-    "@types/node": "^13.9.2",
+    "@types/node": "^13.11.0",
     "@types/pino": "^5.17.0",
     "@types/pouchdb": "^6.4.0",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.3",
-    "jest": "^25.1.0",
-    "lint-staged": "^10.0.8",
+    "jest": "^25.2.7",
+    "lint-staged": "^10.1.2",
     "nodemon": "^2.0.2",
     "pouchdb-adapter-memory": "^7.2.1",
     "pouchdb-server": "^4.2.0",
-    "prettier": "^1.19.1",
-    "ts-jest": "^25.2.1",
-    "ts-node": "^8.7.0",
+    "prettier": "^2.0.2",
+    "ts-jest": "^25.3.1",
+    "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
   "dependencies": {
@@ -52,8 +52,8 @@
     "content-type": "^1.0.4",
     "http4ts": "0.0.3",
     "jsonwebtoken": "^8.5.1",
-    "pino": "^5.17.0",
-    "pino-pretty": "^3.6.1",
+    "pino": "^6.1.1",
+    "pino-pretty": "^4.0.0",
     "pouchdb": "^7.2.1"
   },
   "jest": {
@@ -70,8 +70,8 @@
     "parser": "@typescript-eslint/parser",
     "extends": [
       "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint",
-      "plugin:prettier/recommended"
+      "prettier",
+      "prettier/@typescript-eslint"
     ],
     "parserOptions": {
       "ecmaVersion": 2018,
@@ -85,6 +85,10 @@
       "@typescript-eslint/no-use-before-define": 0,
       "@typescript-eslint/no-inferrable-types": 0
     }
+  },
+  "prettier": {
+    "trailingComma": "none",
+    "arrowParens": "avoid"
   },
   "husky": {
     "hooks": {
